--- a/index.html
+++ b/index.html
@@ -7,33 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <div class="container">
         <h1>Apartment Finder</h1>
-    </header>
-
-    <main>
         <form id="search-form">
-            <label for="location">Location:</label>
-            <input type="text" id="location" name="location" required>
-
-            <label for="price-range">Price Range:</label>
-            <input type="text" id="price-range" name="price-range">
-
-            <label for="bedrooms">Number of Bedrooms:</label>
-            <input type="number" id="bedrooms" name="bedrooms">
-
+            <input type="text" id="town" placeholder="Enter town or city" required>
+            <input type="number" id="min-price" placeholder="Min Price" required>
+            <input type="number" id="max-price" placeholder="Max Price" required>
+            <input type="number" id="bedrooms" placeholder="Number of Bedrooms" required>
             <button type="submit">Search</button>
         </form>
-
-        <section id="results">
-            <!-- Apartment listings will be displayed here -->
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Apartment Finder</p>
-    </footer>
-
-    <script src="app.js"></script>
+        <div id="results"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
